--- a/app/core/market/templates/market/market.html
+++ b/app/core/market/templates/market/market.html
@@ -23,7 +23,7 @@
       <td>{{ u.informations.author }}</td>
       <td>{{ u.informations.licence }}</td>
       <td class="td-actions">
-          {% if u.name in modules_installed %}
+          {% if u.installed %}
             <a href="{{url_for('market.market_del', module=u.name)}}" class="btn btn-small btn-danger"><i class="btn-icon-only icon-remove icon-white"></i></a>
           {% else %}
             <a href="{{url_for('market.market_get', module=u.name)}}" class="btn btn-small btn-success"><i class="btn-icon-only icon-arrow-down icon-white"></i></a>
