--- a/app/templates/menu_left.html
+++ b/app/templates/menu_left.html
@@ -9,7 +9,8 @@
                 {%- for endpoint, caption, role in [
                                   ('servers.server', 'Servers', 200),
                                   ('profil.accounts', 'Accounts', 300),
-                                  ('market.themarket', 'Market', 300)
+                                  ('market.themarket', 'Market', 300),
+                                  ('organisations.organisation', 'Organisation', 300),
                 ] %}
                 {% if g.user.role >= role %}
                   <li {% if endpoint == request.endpoint %} class="active" {% endif %}><a href="{{url_for(endpoint)}}">{{ caption }}</a></li>
