--- a/app/core/profil/templates/profil/account_add.html
+++ b/app/core/profil/templates/profil/account_add.html
@@ -11,7 +11,8 @@
         {{ render_field(form.email, class="input-xlarge") }}
         {{ render_field(form.displayname, class="input-xlarge") }}
         {{ render_field(form.password, class="input-xlarge") }}
-        {{ render_field(form.role, class="input-xlarge") }}
+        {{ render_field(form.role, class="input-large") }}
+        {{ render_field(form.organisations, class="input-large") }}
         {{ render_field(form.submit, class="btn btn-primary") }}
       </form>
 
