--- a/app/core/profil/templates/profil/profil.html
+++ b/app/core/profil/templates/profil/profil.html
@@ -28,6 +28,7 @@
                 {{ render_field(form.username, class="input-xlarge", disabled="disabled") }}
                 {{ render_field(form.displayname, class="input-xlarge") }}
                 {{ render_field(form.email, class="input-xlarge") }}
+                {{ render_field(form.language, class="input-xlarge") }}
                 <br><br>
                 {{ render_field(form.password, class="input-xlarge") }}
                 <br>
