--- a/app/core/profil/templates/profil/accounts.html
+++ b/app/core/profil/templates/profil/accounts.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-{% set real_role = {100 : 'User', 200 : 'Manager', 300 : 'Admin' } %}
+{% set real_role = {100 : 'Admin', 200 : 'Manager', 300 : 'Root' } %}
 
 <div class="container">
 
