--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,9 @@ $(".alert").alert()
     <div class="container-fluid">
       <div class="row-fluid">
 
-        {% include "menu_left.html" %}
+        {% if g.wizard != True %}
+            {% include "menu_left.html" %}
+        {% endif %}
 
         {% block content %}
 	<div class="container">
