--- a/app/core/profil/templates/profil/accounts.html
+++ b/app/core/profil/templates/profil/accounts.html
@@ -16,6 +16,7 @@
         <th>{{ _('Email') }}</th>
         <th>{{ _('Display name') }}</th>
         <th>{{ _('Role') }}</th>
+        <th>{{ _('Organisation') }}</th>
       <th class="td-actions"></th>
       </tr>
     </thead>
@@ -26,6 +27,7 @@
       <td>{{ u.email }}</td>
       <td>{{ u.displayname }}</td>
       <td>{{ real_role[u.role] }}</td>
+      <td>{{ u.organisations.name }}</td>
       <td class="td-actions">
         <a href="{{url_for('profil.account_edit', id=u.id)}}" class="btn btn-small"><i class="btn-icon-only icon-edit"></i></a>
         <a href="{{url_for('profil.account_del', id=u.id)}}" class="btn btn-small"><i class="btn-icon-only icon-remove"></i></a>
