--- a/app/core/organisations/templates/organisations/organisation_edit.html
+++ b/app/core/organisations/templates/organisations/organisation_edit.html
@@ -8,6 +8,7 @@
         {{ form.csrf_token }}
         <h2 class="form">{{ _('Edit organisation') }}</h2>
         {{ render_field(form.name, class="input-xlarge") }}
+        {{ render_field(form.description, class="input-xlarge") }}
         {{ render_field(form.users, class="input-xlarge") }}
         {{ render_field(form.submit, class="btn btn-primary") }}
       </form>
