--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,12 +7,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/bootstrap-progressbar.css') }}">
     <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/custom.css') }}">
 </head>
 
 <body>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery-1.10.1.min.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/bootstrap-progressbar.min.js') }}"></script>
 
 {% include "menu_top.html" %}
 
