--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,7 @@
 
 <body>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery-1.10.1.min.js') }}"></script>
+    <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery.tablesorter.min.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/bootstrap-progressbar.min.js') }}"></script>
 
