--- a/app/templates/menu_top.html
+++ b/app/templates/menu_top.html
@@ -24,6 +24,10 @@
           <li id="fat-menu" class="dropdown">
           <a href="#" id="drop3" role="button" class="dropdown-toggle" data-toggle="dropdown">{{ _('Servers') }}<b class="caret"></b></a>
             <ul class="dropdown-menu" role="menu" aria-labelledby="servers">
+                <li role="presentation">{{_('Choosing server ...')}}</li>
+              {% if g.server %}
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="{{url_for('servers.server_disconnect')}}">{{_('Disconnect from') }}</a></li>
+              {% endif %}
               {% for s in g.servers_list %}
                 <li role="presentation"><a role="menuitem" tabindex="-1" href="{{url_for('servers.server_save', id=s.id)}}">{{ s.name }} ({{ s.address }})</a></li>
               {% endfor %}
