check email, added protocol version

--- a/app/core/servers/templates/server/server_add.html
+++ b/app/core/servers/templates/server/server_add.html
@@ -11,6 +11,7 @@
         {{ render_field(form.address, class="input-xlarge") }}
         {{ render_field(form.login, class="input-xlarge") }}
         {{ render_field(form.password, class="input-xlarge") }}
+        {{ render_field(form.protocol) }}
         {{ render_field(form.organisations, class="input-xlarge") }}
         {{ render_field(form.users, class="input-xlarge") }}
         {{ render_field(form.submit, class="btn btn-primary") }}
