--- a/app/core/servers/templates/server/server_edit.html
+++ b/app/core/servers/templates/server/server_edit.html
@@ -11,6 +11,7 @@
         {{ render_field(form.address, class="input-xlarge") }}
         {{ render_field(form.login, class="input-xlarge") }}
         {{ render_field(form.password, class="input-xlarge") }}
+        {{ render_field(form.protocol) }}
         {% if g.user.role == 300 %}
             {{ render_field(form.organisations, class="input-xlarge") }}
         {% endif %}
