--- a/app/core/profil/templates/profil/license.html
+++ b/app/core/profil/templates/profil/license.html
@@ -684,8 +684,18 @@ For more information on this, and how to apply and follow the GNU AGPL, see
 &lt;<a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>&gt;.</p>
 
 </div>
-<div class="modal-footer">
-<button class="btn" data-dismiss="modal" aria-hidden="true">{{_('Close')}}</button>
-<button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">{{_('Accept')}}</button>
+    <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true" id="signup-refuse">{{_('Refuse')}}</button>
+        <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true" id="signup-accept">{{_('Accept')}}</button>
+    </div>
 </div>
-</div>
+
+<script>
+$("#signup-accept").click(function() {
+    $('input#agree').prop('checked', true);
+});
+
+$("#signup-refuse").click(function() {
+    $('input#agree').prop('checked', false);
+});
+</script>
