--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -5,7 +5,6 @@
   position:fixed;
   bottom:0px;
 }
-
 body {
   padding-top: 60px;
   padding-bottom: 40px;
@@ -17,26 +16,30 @@ body {
 }
 
 .form-signin {
-  max-width: 300px;
-  padding: 19px 29px 29px;
-  margin: 0 auto 20px;
-  background-color: #fff;
-  border: 1px solid #e5e5e5;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-   box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    max-width: 300px;
+    padding: 19px 29px 29px;
+    margin: 0 auto 20px;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    border-radius: 10px;
 }
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
-   margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 .form-signin input[type="text"],
 .form-signin input[type="password"] {
-   font-size: 16px;
-   height: auto;
-   margin-bottom: 15px;
-   padding: 7px 9px;
+    font-size: 16px;
+    height: auto;
+    margin-bottom: 15px;
+    padding: 7px 9px;
+}
+
+.login-extra {
+    display: block; 
+    width: 300px; 
+    margin: 1.5em auto;
+    text-align: center;
+    line-height: 19px; 
+    color: white;
 }
