added alternate css for demo

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <link rel="stylesheet" media="screen" title="xivo" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <link rel="alternate stylesheet" media="screen" title="original" href="{{ url_for('static', filename='css/bootstrap-classic.css') }}">
     <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/bootstrap-progressbar.css') }}">
     <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/custom.css') }}">
 </head>
