--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,8 +40,9 @@
 
 
 
+   <div class="container-fluid">
    <div class="row-fluid">
-       <div class="span1">
+       <div class="span2">
             {% if g.wizard != True %}
                  {% include "menu_left.html" %} 
             {% endif %}
@@ -60,6 +61,7 @@
            {% endblock %}
 
        </div>
+    </div>
     </div>
 
     <div id="footer"> 
