little changing on html template

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,11 +20,9 @@
     {% block header %}
     {% endblock %}
 </head>
-
 <body>
 
 {% include "menu_top.html" %}
-
     <div class="container">
         <div class="row">
             <div class="span12">
@@ -38,30 +36,37 @@
         </div>
     </div>
 
-
-
    <div class="container-fluid">
-   <div class="row-fluid">
+     <div class="row-fluid">
        <div class="span2">
             {% if g.wizard != True %}
                  {% include "menu_left.html" %} 
             {% endif %}
-
        </div>
 
-       <div class="span10">
-           {% block content %}
+       <div class="span8">
 	   <div class="container">
-	       <div class="hero-unit">
-	           <h1>{{ _('Welcome') }}, {{ current_user.displayname }} !</h1>
-	           <p>{{ _('This is the new webi interfaces for XiVO, developp with flask for better performance and better experiences.') }}</p>
-	           <p><a href="http://documentation.xivo.fr" class="btn btn-primary btn-large">{{_('Learn more')}} &raquo;</a></p>
-	       </div>
-	   </div>
-           {% endblock %}
+           {% block content %}
+	       <h1>{{ _('Welcome') }}, {{ current_user.displayname }} !</h1>
+               <p>{{ _('This web interface is a new GUI for XiVO based on flask.')}}</p>
+               <span class="label label-warning">{{_('Step 1')}}</span> {{_('Please configure your profil.')}}<br>
+               <span class="label label-warning">{{_('Step 2')}}</span> {{_('Go to the market place and install the module you need for your organisation')}}<br>
+               <span class="label label-warning">{{_('Step 3')}}</span> {{_('Add XiVO server on servers menu.')}}<br>
+               <span class="label label-warning">{{_('Step 4')}}</span> {{_('Connecting to the server and get module on market place')}}<br>
+               <span class="label label-warning">{{_('Step 5')}}</span> {{_('Enjoy :)')}}<br><br>
 
+               <div class="alert alert-info">
+                   <p>{{_('Information : If you need more information please contact me !')}}</p>
+               </div>
+
+               <div class="alert alert-error">
+                   <p>{{_('Important')}} : {{_('This web interface is still beta test, please do not consider it for production !')}}</p>
+               </div>
+           {% endblock %}
+           </div>
        </div>
-    </div>
+
+      </div>
     </div>
 
     <div id="footer"> 
@@ -71,5 +76,4 @@
     </div>
 
 </body>
-
 </html>
