--- a/app/core/home/templates/home/home_server.html
+++ b/app/core/home/templates/home/home_server.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="container">
-{{ _('Hello you\'re connected to') }} {{ g.server.name }} ({{ g.server.address }}), {{ _('have fun ! :)') }}
-</div>
+<div class="alert alert-info">
+    <p>{{ _('Hello you\'re connected to') }} {{ g.server.name }} ({{ g.server.address }}), {{ _('have fun ! :)') }}</p>
+<div>
 
 {% endblock %}
