--- a/app/templates/menu_top.html
+++ b/app/templates/menu_top.html
@@ -1,7 +1,7 @@
 {% if current_user.is_authenticated() %}
 
 <div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
+  <div class="navbar-inner" style="width: auto; height: 0px;">
     <div class="container-fluid">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
@@ -9,14 +9,7 @@
         <span class="icon-bar"></span>
       </a>
       <a class="brand" href="{{ url_for('home.homepage') }}">XiVO</a>
-      <div class="nav-collapse collapse">
-            <p class="navbar-text pull-right">
-          {% if g.server %}
-              <span id="servers_list" title="ID server : {{ g.server.id }}">{{_('on') }} {{ g.server.address }}&nbsp;&nbsp;</span>
-          {% endif %}
-              {{ _('Welcome') }} <a href="{{url_for('profil.myprofil')}}" class="navbar-link">{{current_user.displayname}}</a>&nbsp;&nbsp;
-              <a href="{{ url_for('login.logout') }}"><i class="icon-off icon-white"></i></a>
-            </p>
+      <div class="nav-collapse">
         <ul class="nav">
           <li><a href="{{ url_for('home.homepage') }}">{{ _('Home') }}</a></li>
         </ul>
@@ -33,6 +26,11 @@
               {% endfor %}
             </ul>
           </li>
+          {% if g.server %}
+              <li class="navbar-link" id="servers_list" title="ID server : {{ g.server.id }}"><a>{{_('on') }} {{ g.server.address }}</a></li>
+          {% endif %}
+              <li class="navbar-link"><a href="{{url_for('profil.myprofil')}}">{{ _('Welcome') }}  {{current_user.displayname}}</a>&nbsp;&nbsp;</li>
+              <li class="logout" title="{{_('Logout')}}"><a href="{{ url_for('login.logout') }}" class="logout"><i class="icon-off icon-white"></i></a></li>
         </ul>
       </div>
     </div>
