--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,8 +44,8 @@
             {% endif %}
        </div>
 
-       <div class="span8">
-	   <div class="container">
+       <div class="span10">
+	   <div class="container-fluid">
            {% block content %}
 	       <h1>{{ _('Welcome') }}, {{ current_user.displayname }} !</h1>
                <p>{{ _('This web interface is a new GUI for XiVO based on flask.')}}</p>
