--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -29,8 +29,8 @@ body {
 }
 .form-signin input[type="text"],
 .form-signin input[type="password"] {
-    font-size: 16px;
-    height: auto;
+    font-size: 14px;
+    height: 12px;
     margin-bottom: 15px;
     padding: 7px 9px;
 }
